<resources>
    <string name="app_name">HotelApp</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HotelApp</string>
    <string name="nav_header_subtitle">Nhom2-KMA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>
    <string name="action_out">Thoát</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_room_list">Sơ đồ phòng</string>
    <string name="menu_invoice">Hóa đơn</string>
    <string name="menu_receipt">Hóa đơn</string>
    <string name="menu_service">Dịch vụ</string>
    <string name="menu_revenue">Doanh thu</string>
    <string name="menu_manage">Quản lý</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome">Welcome!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_room">EditRoom</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_room">image_room</string>
    <string name="image_service">image_room</string>
    <string name="image_invoice">image_invoice</string>
    <string name="image_info">image_info</string>
    <string name="image_app">image_app</string>
    <string name="image_help">image_help</string>
    <string name="room_plan_card">SƠ ĐỒ PHÒNG</string>
    <string name="service_card">DỊCH VỤ</string>
    <string name="invoice_card">HÓA ĐƠN</string>
    <string name="info_card">THÔNG TIN</string>
    <string name="app_card">ỨNG DỤNG</string>
    <string name="help_card">TRỢ GIÚP</string>
    <string name="delete_invoice">Xóa hóa đơn</string>
    <string name="add_service">Thêm dịch vụ</string>
    <string name="submit">Xác nhận</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="addService">Thêm dịch vụ</string>
    <string name="lastWeek">Tuần trước</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="username">username</string>
    <string name="idText">(ID: ----- )</string>
    <string name="selectDay">Chọn ngày</string>
    <string name="forgotPassword">Quên mật khẩu? Lấy lại!</string>
    <string name="Hotline">Hotline: 039326xxxx</string>
    <string name="login">Đăng nhập</string>
    <string name="hotel_code">Mã khách sạn</string>
    <string name="icon_app">icon-app</string>
    <string name="header">header</string>
    <string name="usernameL">Tên đăng nhập</string>
    <string name="passwordL">Mật khẩu</string>
    <string name="err">Error</string>
    <string name="loginError">Tài khoản hoặc mật khẩu không chính xác. Hãy thử lại!</string>
    <string name="OK">OK</string>
    <string name="danh_s_ch_t_ph_ng">Danh sách đặt phòng</string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="fingerprint_login"><u>Đăng nhập bằng vân tay</u></string>
    <string name="account">Tài khoản</string>
    <string name="manager">Quản lý</string>
    <string name="log_out">Đăng xuất</string>
    <string name="app">Ứng dụng</string>
    <string name="info_app">Về ứng dụng</string>
    <string name="sup">Hỗ trợ</string>
    <string name="login_pass_notice">Không có dữ liệu đăng nhập, xin vui lòng đăng nhập bằng tài khoản và mật khẩu!</string>
    <string-array name="optionCheckIn">
        <item>Theo ngày</item>
        <item>Theo giờ</item>
    </string-array>
</resources>