<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_room_list"
            android:icon="@drawable/bed_empty"
            android:title="@string/menu_room_list" />

        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/coffee_maker"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_booking_list"
            android:icon="@drawable/calendar"
            android:title="@string/danh_s_ch_t_ph_ng" />
        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/currency_usd"
            android:title="@string/menu_invoice" />
        <item
            android:id="@+id/nav_revenue"
            android:icon="@drawable/chart_areaspline"
            android:title="@string/menu_revenue" />
    </group>
    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_manage"
                    android:icon="@drawable/briefcase"
                    android:title="@string/manager" />
                <item android:id="@+id/nav_change_password"
                    android:icon="@drawable/key"
                    android:title="@string/change_password" />
                <item android:id="@+id/nav_log_out"
                    android:icon="@drawable/logout_variant"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>

    <item android:title="@string/app">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/info_app"
                    android:icon="@drawable/information"
                    android:title="@string/info_app" />
                <item
                    android:id="@+id/assist"
                    android:icon="@drawable/help_circle"
                    android:title="@string/sup" />
            </group>
        </menu>
    </item>
</menu>

