<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotelapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_room_list"
        android:name="com.example.hotelapp.ui.listRoom.ListRoomFragment"
        android:label="@string/menu_room_list"
        tools:layout="@layout/fragment_room_list" />
    <fragment
        android:id="@+id/nav_service"
        android:name="com.example.hotelapp.ui.service.ServiceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_service" />
    <fragment
        android:id="@+id/nav_receipt"
        android:name="com.example.hotelapp.ui.ReceiptFragment"
        android:label="@string/menu_receipt"
        tools:layout="@layout/fragment_receipt" />
    <fragment
        android:id="@+id/nav_revenue"
        android:name="com.example.hotelapp.ui.service.ServiceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_service" />
</navigation>